test/spec_vectors/table_fill/fail/module_3.wat
(module (table $t 10 externref) (func $type-value-empty-vs (table.fill $t (i32.const 1) (i32.const 1))))